# QuantumBot

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  agenda-hackathon.json  agenda-workshop.json  docker-compose.yaml  index.py  main.py  pyproject.toml  requirements.txt  schedules.json
.github/workflows/: pre_commit_check.yaml  python_tests.yaml
config/languages/: en.json  pl.json
config/servers/: .gitignore  server.json.example
schedules/: schedule.json.example
servers/: server.json.example
src/: Client.py  Deadline.py  Event.py  Formats.py  Schedule.py  ScheduleData.py  Server.py  Servers.py  SplitEmbed.py  TimezoneData.py  Translations.py  Validator.py  announcement.py  main.py  run_announcement.py
src/announcement/: __init__.py  announcement.py  announcement_client.py  announcement_controller.py
src/client/: client.py
src/embed_splitter/: __init__.py  embed_field.py  embed_splitter.py
src/language/: __init__.py  embed.py  language.py  language_configuration.py  message.py  weekday.py
src/message_handlers/: AnnouncementHandler.py  CommandHandler.py  MessageReactionHandler.py
src/server/: __init__.py  base_event.py  deadline.py  reaction.py  schedule_event.py  server.py  timezone.py
tests/: conftest.py  test_main.py  test_run_announcement.py  test_run_main.py
tests/announcement/: test_announcement.py  test_announcement_client.py  test_announcement_controller.py
tests/assets/: server.json
tests/client/: test_client.py
tests/embed_splitter/: test_embed_field.py  (+1 more)
(+24 files in other folders)
